fixed spacing of to-do items

--- a/staticfiles/home/custom.css
+++ b/staticfiles/home/custom.css
@@ -17,11 +17,11 @@ body {
 }
 .todo_complete {
     color: grey;
-    line-height: .5em;
+    line-height: 1em;
 }
 
 .todo_incomplete {
-    line-height: .5em;
+    line-height: 1em;
 }
 .author {
     font-size: 1vw;
